feat: Testes ItemServiceTest e TarefaServiceTest atualizados